# 2510-backtrader

./: .env  .env.example  CLAUDE.md  README.md  prompt-optimizer.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: design_zh.md  execute_zh.md  spec_zh.md  task_zh.md
demos/: 01_sma_crossover.py  02_beta_calculation.py  03_tracking_error.py
src/: beta.py  data_source.py  tracking_error.py  utils.py
