[project]
name = "2510-backtrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtrader>=1.9.78.123",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "tushare>=1.4.24",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
